--- a/index.html
+++ b/index.html
@@ -23,8 +23,6 @@
 
         <h2>education</h2>
         <h3>&emsp;  桃園市立錦興國小&emsp;
-
-        </h3>
         <h3>&emsp;  桃園市立光明國中</h3>
         <h3>&emsp;  桃園市立壽山高中</h3>
         <h3>&emsp;  長庚大學資訊工程學系 二年級</h3>
@@ -32,9 +30,20 @@
         <h2>contact</h3>
         <!-- <h3>&emsp;  0919465383</h3> -->
         <h3>&emsp;  alice2001090503@gmail.com</h3>
+        <h3>&emsp;  B0829042@cgu.edu.tw</h3>
         <a href="https://www.facebook.com/profile.php?id=100003075657683"><img src="facebook-new.png" width="50px" height="50px">
         <a href="https://www.instagram.com/__010503__/"><img src="—Pngtree—instagram color icon instagram logo_3547787.png" width="50px" height="50px">
         <a href="https://github.com/CHEN-HSING-CHIEH"><img src="github-logo.png" width="65px" height="45px">
+      </div>
+
+      <div class="down">
+
+        <h2>興趣</h2>
+        <hr>
+        <img src="69-692482_volleyball-volleyball-icon-transparent-hd-png-download.png" width="265px" height="245px" >
+        <img src="iconfinder_tv_television_channel_entertainment_5402432.png" width="265px" height="245px" >
+        <a href="https://www.spotify.com/tw/home/"><img src="iconfinder_music-social-network-brand-logo_1829774.png" width="265px" height="245px" >
+        <div style="text-align:center;padding:1em 0;"> <h4><a style="text-decoration:none;" href="https://www.zeitverschiebung.net/en/city/1668341"><span style="color:gray;">Current local time in</span><br />Taipei, Taiwan</a></h4> <iframe src="https://www.zeitverschiebung.net/clock-widget-iframe-v2?language=en&size=small&timezone=Asia%2FTaipei" width="100%" height="90" frameborder="0" seamless></iframe> </div>
       </div>
       
  
