--- a/index.html
+++ b/index.html
@@ -31,10 +31,16 @@
         <!-- <h3>&emsp;  0919465383</h3> -->
         <h3>&emsp;  alice2001090503@gmail.com</h3>
         <h3>&emsp;  B0829042@cgu.edu.tw</h3>
-        <a href="https://www.facebook.com/profile.php?id=100003075657683"><img src="facebook-new.png" width="50px" height="50px">
-        <a href="https://www.instagram.com/__010503__/"><img src="—Pngtree—instagram color icon instagram logo_3547787.png" width="50px" height="50px">
-        <a href="https://github.com/CHEN-HSING-CHIEH"><img src="github-logo.png" width="65px" height="45px">
+        <a href="https://www.facebook.com/profile.php?id=100003075657683"><img src="facebook-new.png" width="50px" height="50px"></a>
+        <a href="https://www.instagram.com/__010503__/"><img src="—Pngtree—instagram color icon instagram logo_3547787.png" width="50px" height="50px"></a>
+        <a href="https://github.com/CHEN-HSING-CHIEH"><img src="github-logo.png" width="65px" height="45px"></a>
       </div>
+      <!-- <div class="curriculum">
+      <h2>課表</h2>
+      <hr>
+      <img src="螢幕擷取畫面 2021-03-23 200227.png"  >
+
+      </div> -->
 
       <div class="down">
 
