--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="zh-TW">
   <head>
-    <meta name=”viewport” content=”width=device-width, initial-scale=1.0">
+    <meta name=”viewport” content=”width:device-width, initial-scale=1.0">
     <title>陳星潔的個人網頁</title>
     <link rel="stylesheet" href="style.css"/>
     <meta charset="utf-8">
