--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <title>陳星潔的個人網頁</title>
     <link rel="stylesheet" href="style.css"/>
     <meta charset="utf-8">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?
+    id=GA_MEASUREMENT_ID"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-ZPHR73H2YV');
+</script>
   </head>
 
     <body>
